# farm-management

./: .gitignore  .replit  DEPLOYMENT.md  app.py  database.py  db_utils.py  init_db.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml  secrets.toml  secrets.toml.example
attached_assets/: Pasted-Functional-Requirements-4-1-Animal-Management-Module-Core-Features-Animal-registration-with-uni-1761457532250_1761457532251.txt
